--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="100dp"
         android:src="@mipmap/slpash_logo" />
 
     <TextView
@@ -21,18 +21,17 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="NOBATDEHI"
-        android:textColor="#fff"
+        android:textColor="#0f5b95"
         android:layout_gravity="center_horizontal"
-        android:textSize="35sp" />
+        android:textSize="30sp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:text="نرم‌افزار تخصصی نوبت‌دهی"
         android:textColor="#fff"
         android:layout_gravity="center_horizontal"
-        android:textSize="12sp" />
+        android:textSize="16sp" />
 
     <ImageView
         android:layout_width="match_parent"
@@ -53,6 +52,7 @@
             android:textColor="#fff"
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
+            android:layout_marginBottom="3dp"
             android:textSize="10sp" />
 
     </RelativeLayout>
