--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -17,11 +17,10 @@
         android:src="@mipmap/slpash_logo" />
 
     <TextView
+        android:id="@+id/lblAppEnglishName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="NOBATDEHI"
-        android:textColor="#0f5b95"
         android:layout_gravity="center_horizontal"
         android:textSize="30sp" />
 
