--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="colorPrimaryDark">#179aff</color>
     <color name="colorAccent">#1799ff</color>
 
+    <color name="whiteColor">#fff</color>
 
+    <color name="navigationColor">#29b2ff</color>
 </resources>
