--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -77,7 +77,7 @@
 
         </LinearLayout>
 
-        <VideoView
+        <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#e0e0e0" />
@@ -102,7 +102,7 @@
 
         </LinearLayout>
 
-        <VideoView
+        <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#e0e0e0" />
@@ -127,7 +127,7 @@
 
         </LinearLayout>
 
-        <VideoView
+        <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#e0e0e0" />
