--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/whiteColor"
-    tools:context="com.kosarict.mrs.fragment.RequestFragment">
+    tools:context="com.kosarict.mrs.fragment.RegisterFragment">
 
 
     <LinearLayout
