--- a/app/src/main/res/layout/fragment_docrequest.xml
+++ b/app/src/main/res/layout/fragment_docrequest.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.kosarict.mrs.fragment.RequestFragment">
+    tools:context=".fragment.DocRequestFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,8 +13,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:orientation="horizontal"
             android:gravity="center_vertical|right"
+            android:orientation="horizontal"
             android:weightSum="100">
 
             <LinearLayout
@@ -40,22 +40,24 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="#535353"
-                    android:text="از تاریخ"/>
+                    android:text="از تاریخ"
+                    android:textColor="#535353" />
             </LinearLayout>
 
         </LinearLayout>
+
         <View
-            android:layout_height="1dp"
             android:layout_width="match_parent"
-            android:background="#e1e1e1"/>
+            android:layout_height="1dp"
+            android:background="#e1e1e1" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:orientation="horizontal"
             android:gravity="center_vertical|right"
+            android:orientation="horizontal"
             android:weightSum="100">
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -70,6 +72,7 @@
                 </Spinner>
 
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -79,61 +82,23 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="#535353"
-                    android:text="تا تاریخ"/>
+                    android:text="تا تاریخ"
+                    android:textColor="#535353" />
             </LinearLayout>
 
         </LinearLayout>
 
         <View
-            android:layout_height="1dp"
             android:layout_width="match_parent"
-            android:background="#e1e1e1"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:orientation="horizontal"
-        android:weightSum="100">
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="60"
-            android:gravity="center_vertical">
-
-            <Spinner
-                android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:background="@mipmap/spinner_background">
-
-            </Spinner>
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="40"
-            android:gravity="center_vertical|right">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#535353"
-                android:text="تعداد نوبت درخواستی"
-                />
-        </LinearLayout>
-    </LinearLayout>
-
-        <View
             android:layout_height="1dp"
-            android:layout_width="match_parent"
-            android:background="#e1e1e1"/>
+            android:background="#e1e1e1" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:orientation="horizontal"
             android:weightSum="100">
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -148,6 +113,7 @@
                 </Spinner>
 
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -157,22 +123,62 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="#535353"
+                    android:text="تعداد نوبت درخواستی"
+                    android:textColor="#535353" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#e1e1e1" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:orientation="horizontal"
+            android:weightSum="100">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="60"
+                android:gravity="center_vertical">
+
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:background="@mipmap/spinner_background">
+
+                </Spinner>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="40"
+                android:gravity="center_vertical|right">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="درمانگاه"
-                    />
+                    android:textColor="#535353" />
             </LinearLayout>
         </LinearLayout>
 
         <View
-            android:layout_height="1dp"
             android:layout_width="match_parent"
-            android:background="#e1e1e1"/>
+            android:layout_height="1dp"
+            android:background="#e1e1e1" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:orientation="horizontal"
             android:weightSum="100">
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -185,10 +191,11 @@
                     android:layout_height="match_parent"
                     android:layout_weight="50"
                     android:gravity="center_vertical|center_horizontal">
+
                     <CheckBox
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                        android:checked="true"/>
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:checked="true" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -196,12 +203,14 @@
                     android:layout_height="match_parent"
                     android:layout_weight="50"
                     android:gravity="center_vertical|center_horizontal">
+
                     <CheckBox
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:checked="false"/>
+                        android:checked="false" />
                 </LinearLayout>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -211,57 +220,55 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="#535353"
                     android:text="وضعیت"
-                    />
+                    android:textColor="#535353" />
             </LinearLayout>
         </LinearLayout>
 
         <View
-            android:layout_height="1dp"
             android:layout_width="match_parent"
-            android:background="#e1e1e1"/>
+            android:layout_height="1dp"
+            android:background="#e1e1e1" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal"
-            android:weightSum="100"
-            android:layout_marginTop="10dp">
+            android:weightSum="100">
 
 
-                <LinearLayout
-                    android:layout_width="0dp"
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="2dp"
+                android:layout_weight="50"
+                android:gravity="center_vertical|right">
+
+                <Button
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="50"
-                    android:layout_marginRight="2dp"
-                    android:gravity="center_vertical|right">
+                    android:background="@drawable/btn_cancel_drawable"
+                    android:text="انصراف و بازگشت"
+                    android:textColor="@color/whiteColor" />
 
-                    <Button
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="انصراف و بازگشت"
-                        android:textColor="@color/whiteColor"
-                        android:background="@drawable/btn_cancel_drawable"/>
+            </LinearLayout>
 
-                </LinearLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="2dp"
+                android:layout_weight="50"
+                android:gravity="center_vertical">
 
-                <LinearLayout
-                    android:layout_width="0dp"
+                <Button
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="50"
-                    android:layout_marginLeft="2dp"
-                    android:gravity="center_vertical">
+                    android:background="@drawable/btn_confirm_drawable"
+                    android:text="ثبت اطلاعات"
+                    android:textColor="@color/whiteColor" />
 
-                    <Button
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="ثبت اطلاعات"
-                        android:textColor="@color/whiteColor"
-                        android:background="@drawable/btn_confirm_drawable"/>
-
-                </LinearLayout>
-
+            </LinearLayout>
 
 
         </LinearLayout>
