--- a/app/src/main/res/layout/fragment_pationrequest.xml
+++ b/app/src/main/res/layout/fragment_pationrequest.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/whiteColor"
     tools:context="com.kosarict.mrs.fragment.PationRequestFragment">
 
     <LinearLayout
@@ -9,6 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="70dp"
