--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -56,9 +56,10 @@
                 android:gravity="center_vertical">
 
                 <Spinner
+                    android:id="@+id/ddlState"
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
-                    android:background="@mipmap/spinner_background"></Spinner>
+                    android:background="@mipmap/spinner_background"/>
 
             </LinearLayout>
 
@@ -97,9 +98,10 @@
                 android:gravity="center_vertical">
 
                 <Spinner
+                    android:id="@+id/ddlCity"
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
-                    android:background="@mipmap/spinner_background"></Spinner>
+                    android:background="@mipmap/spinner_background"/>
 
             </LinearLayout>
 
@@ -137,9 +139,10 @@
                 android:gravity="center_vertical">
 
                 <Spinner
+                    android:id="@+id/ddlHospitalType"
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
-                    android:background="@mipmap/spinner_background"></Spinner>
+                    android:background="@mipmap/spinner_background"/>
 
             </LinearLayout>
 
@@ -177,9 +180,10 @@
                 android:gravity="center_vertical">
 
                 <Spinner
+                    android:id="@+id/ddlHospital"
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
-                    android:background="@mipmap/spinner_background"></Spinner>
+                    android:background="@mipmap/spinner_background"/>
 
             </LinearLayout>
 
@@ -217,6 +221,7 @@
                 android:gravity="center_vertical">
 
                 <EditText
+                        android:id="@+id/txtNationalCode"
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
                     android:inputType="number"
@@ -224,6 +229,7 @@
                     android:singleLine="true"
                     android:textSize="14sp"
                     android:textColor="#989898"
+                    android:textAlignment="center"
                     android:background="@drawable/edit_text_drawable"/>
             </LinearLayout>
 
@@ -263,6 +269,7 @@
                 android:gravity="center_vertical">
 
                 <Button
+                    android:id="@+id/btnRegisterCancel"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="انصراف و بازگشت"
@@ -279,6 +286,7 @@
                 android:gravity="center_vertical">
 
                 <Button
+                    android:id="@+id/btnRegisterSubmit"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="ثبت اطلاعات"
