--- a/app/src/main/res/layout/fragment_docrequest.xml
+++ b/app/src/main/res/layout/fragment_docrequest.xml
@@ -24,12 +24,19 @@
                 android:layout_weight="60"
                 android:gravity="center_vertical">
 
-                <Spinner
-                    android:layout_width="match_parent"
-                    android:layout_height="45dp"
-                    android:background="@mipmap/spinner_background">
+                <!--                <Spinner
+                                    android:layout_width="match_parent"
+                                    android:layout_height="45dp"
+                                    android:background="@mipmap/spinner_background"/>-->
 
-                </Spinner>
+                <Button
+                    android:id="@+id/btnFromDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="55dp"
+                    android:background="@drawable/button_selector"
+                    android:text="از تاریخ"
+                    android:textColor="@color/whiteColor" />
+
             </LinearLayout>
 
             <LinearLayout
@@ -65,12 +72,18 @@
                 android:layout_weight="60"
                 android:gravity="center_vertical">
 
-                <Spinner
-                    android:layout_width="match_parent"
-                    android:layout_height="45dp"
-                    android:background="@mipmap/spinner_background">
+                <!--                <Spinner
+                                    android:layout_width="match_parent"
+                                    android:layout_height="45dp"
+                                    android:background="@mipmap/spinner_background"></Spinner>-->
 
-                </Spinner>
+                <Button
+                    android:id="@+id/btnToDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="55dp"
+                    android:background="@drawable/button_selector"
+                    android:text="تا تاریخ"
+                    android:textColor="@color/whiteColor" />
 
             </LinearLayout>
 
@@ -106,12 +119,14 @@
                 android:layout_weight="60"
                 android:gravity="center_vertical">
 
-                <Spinner
+                <EditText
+                    android:id="@+id/txtDocRequestNumberOfTurn"
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
-                    android:background="@mipmap/spinner_background">
-
-                </Spinner>
+                    android:background="@drawable/edit_text_drawable"
+                    android:inputType="number"
+                    android:maxLength="2"
+                    android:textAlignment="center" />
 
             </LinearLayout>
 
@@ -191,7 +206,8 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="50"
-                    android:gravity="center_vertical|center_horizontal">
+                    android:gravity="center_vertical|center_horizontal"
+                    android:visibility="invisible">
 
                     <CheckBox
                         android:layout_width="wrap_content"
@@ -203,12 +219,18 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="50"
-                    android:gravity="center_vertical|center_horizontal">
+                    android:gravity="center_vertical|right">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="فعال" />
 
                     <CheckBox
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:checked="false" />
+                        android:checked="true" />
+
                 </LinearLayout>
             </LinearLayout>
 
@@ -247,6 +269,7 @@
                 android:gravity="center_vertical|right">
 
                 <Button
+                    android:id="@+id/btnDocRequestCancel"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/btn_cancel_drawable"
@@ -263,6 +286,7 @@
                 android:gravity="center_vertical">
 
                 <Button
+                    android:id="@+id/btnDocRequestSubmit"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/btn_confirm_drawable"
